light data shader node color output (GLSL) does not respect energy any more #43250

Closed
opened 2015-01-14 17:47:24 +01:00 by Michael Otto · 15 comments

System Information
Operating system and graphics card

Blender Version
Broken: 2.72
Worked: 2.71

Short description of error
We depend on access to the light energy in many of our shaders, (we used the color output of the light data node for it). This does not work any more.
For GLSL shading, the light data shader node, output "Color" exported the light color before, multiplied by the energy,
Now it only exports the color, regardless of the energy.
In the BI renderer, color is still multiplied with the energy.
The new behaviour in GLSL is more logical imho, but, the energy access is missing. Therefore I can imagine two solutions:

  1. (preferred by me, but not compatible) add an energy output to the node, adapt the BI output to the new GLSL output
  2. restore the old way it worked

What do you think?

Exact steps for others to reproduce the error
select the light in the scene
change the energy
compare GLSL and BI render

**System Information** Operating system and graphics card **Blender Version** Broken: 2.72 Worked: 2.71 **Short description of error** We depend on access to the light energy in many of our shaders, (we used the color output of the light data node for it). This does not work any more. For GLSL shading, the light data shader node, output "Color" exported the light color before, multiplied by the energy, Now it only exports the color, regardless of the energy. In the BI renderer, color is still multiplied with the energy. The new behaviour in GLSL is more logical imho, but, the energy access is missing. Therefore I can imagine two solutions: 1) (preferred by me, but not compatible) add an energy output to the node, adapt the BI output to the new GLSL output 2) restore the old way it worked What do you think? **Exact steps for others to reproduce the error** select the light in the scene change the energy compare GLSL and BI render
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MichaelOtto

Added subscriber: @MichaelOtto

Added subscriber: @dfelinto

Added subscriber: @dfelinto

@psyfi I'm yet to got bisect this one, but I suspect it was caused by your changes. Care to look?

@psyfi I'm yet to got bisect this one, but I suspect it was caused by your changes. Care to look?

@MichaelOtto please attach a sample file that can be used to compare the results between the broken and the working versions

@MichaelOtto please attach a sample file that can be used to compare the results between the broken and the working versions
Member

Added subscribers: @Psy-Fi, @JulianEisel

Added subscribers: @Psy-Fi, @JulianEisel
Member

Just CC'ing Antony correctly

Just CC'ing Antony correctly
Author

lightnodebug.blend

Sorry, I uploaded one, but must have deleted it again by accident.

[lightnodebug.blend](https://archive.blender.org/developer/F137230/lightnodebug.blend) Sorry, I uploaded one, but must have deleted it again by accident.

I did do some change there related to another bug report. I don't remember if that change was directly influencing that bug but I'll check it again to make sure.

I did do some change there related to another bug report. I don't remember if that change was directly influencing that bug but I'll check it again to make sure.
Antonis Ryakiotakis was assigned by Julian Eisel 2015-01-15 20:05:30 +01:00

Added subscriber: @souljedi

Added subscriber: @souljedi

@Psy-Fi I'm bisecting this bug, I get back to you on that soonish. Hopefully we can get this fixed by 2.73a

@Psy-Fi I'm bisecting this bug, I get back to you on that soonish. Hopefully we can get this fixed by 2.73a

@Psy-Fi git bisect tells me that the problem was introduced in 14c57b6c (Fix #42074, textured lamps influencing other layers)

@Psy-Fi git bisect tells me that the problem was introduced in 14c57b6c (Fix #42074, textured lamps influencing other layers)

This issue was referenced by 332cf291e4

This issue was referenced by 332cf291e4b8b104252f34383193aed2f4c814e0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 332cf291e4.

Closed by commit 332cf291e4.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43250
No description provided.