Fix T43250, lamp node did not use energy when used with nodes in blender internal.

Similar to fix for T42074 we need to multiply with energy -after-
texture application.